fix: fix scrollbar style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("/img/background.png");
+  background-image: url("/img/background.webp");
   background-size: cover;
   padding: 2rem;
 }
@@ -19,11 +19,11 @@ a {
 
 *::-webkit-scrollbar{
   width: 10px;
-  background-color: none;
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: rgba(255, 0, 191, 0.322);
+  background-color: rgba(0, 162, 255, 0.322);
+  border-radius: 16px;
 }
 
 
